--- a/package.json
+++ b/package.json
@@ -13,20 +13,35 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^16.18.58",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.11",
+    "@types/react-redux": "^7.1.27",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/sass": "^1.45.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "axios": "^1.6.1",
+    "classnames": "^2.3.2",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
+    "react-sprite": "^2.1.0",
+    "sass": "^1.69.5",
     "styled-components": "^6.0.7",
+    "typescript": "^4.9.5",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.84",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
@@ -36,10 +51,11 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{ts,tsx}": "eslint --cache --fix",
     "*./src": "prettier --write"
   }
 }
