--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.1",
     "classnames": "^2.3.2",
     "modern-normalize": "^2.0.0",
+    "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
