--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "sass": "^1.69.5",
