--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.3.2"
