--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.1",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "formik": "^2.4.5",
