--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
