--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
